<resources>
    <string name="app_name">Price Watcher</string>
    <string name="add_btn_hint">Add link</string>
    <string name="acc_btn_hint">Account</string>
    <string name="delete">delete</string>
    <string name="main_lbl">Your prices</string>
    <string name="login_pass_hint">Password</string>
    <string name="email">Email</string>
    <string name="login_btn_enter">Enter</string>
    <string name="login_btn_back">Back</string>
    <string name="login_btn_exit">Exit</string>
    <string name="notification_head">Price has been changed!</string>
    <string name="tab_name_info">Info</string>
    <string name="tab_name_graph">Price change</string>
    <string name="inf_tbl_shop_lbl">store</string>
    <string name="inf_tbl_discr_lbl">Description</string>
    <string name="inf_tbl_link_lbl">Link</string>
    <string name="inf_tbl_datecr_lbl">Changed</string>
    <string name="inf_tbl_instock_lbl">Availability</string>
    <string name="inf_tbl_price_lbl">Price</string>
    <string name="login_opt_notif">Notifications</string>
    <string name="registration">signin</string>
    <array name="tabs_name">
        <item>@string/tab_name_info</item>
        <item>@string/tab_name_graph</item>
    </array>

    <string name="sign_tmp_header">signin</string>
    <string name="sign_tmp_text">Your account is registered. To confirm, follow the link from the mail.</string>
    <string name="link_added">Link has been added!</string>
    <string name="add_link_hint">Add link</string>
    <string name="add_btn_add">Add</string>
    <string name="add_from_site">Add from site</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="add_res_1">Product added!</string>
    <string name="add_res_2">Added store inquiry with this product</string>
    <string name="add_res_3">user is attached to an existing product</string>
    <string name="add_res_m1">You already have this product</string>
    <string name="add_res_default_err">Ops! There was an error</string>
    <string name="signup_err_1">This user is already registered</string>
    <string name="signup_err_default">Unrecognized registration error</string>
    <string name="shop_is_added">In the process of adding</string>
    <string name="head_titel_shop">Shop</string>
    <string name="head_titel_description">description</string>
    <string name="head_titel_date">date</string>
    <string name="head_titel_isHave">Availability</string>
    <string name="head_titel_cost">Price</string>
    <string name="not_in_stock">not in stock</string>
    <string name="in_stock">in stock</string>
    <string name="notification_head_group">new changes</string>
    <string name="check_Internet">Check your Internet connection</string>
    <string name="data_loading">Loading...</string>
</resources>
