<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/mainColor_2"
    tools:context="com.example.khokhlovart.price_watcher.LoginActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        tools:text=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:id="@+id/login"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:text=""
        android:id="@+id/pass"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/login"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/login_pass_hint"
        android:inputType="textPassword"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:text="@string/login_btn_enter"
        android:textColor="@color/white"
        android:id="@+id/btn_enter"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:background="@color/colorAccent"
        android:text="@string/login_btn_back"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/btn_back" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/login_btn_exit"
        android:textColor="@color/white"
        android:id="@+id/btn_logout"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_alignBottom="@+id/btn_back"
        android:layout_alignEnd="@+id/pass" />
</RelativeLayout>
