<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor_1"
    tools:context="com.khokhlov.khokhlovart.price_watcher.AddActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_arrow_back_grean_24dp"
            android:id="@+id/add_toolbar_main"
            >
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:hint="@string/add_link_hint"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColor="@color/black"
        android:textSize="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:id="@+id/add_link"
        android:layout_margin="16dp"
        />
    <ImageButton
        android:id="@+id/btn_buffer_past"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_library_books_grean_24dp"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:background="#00000000"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/add_btn_add"
        android:background="@color/colorAccent"
        android:id="@+id/btn_add"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/add_link"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_from_site"
        android:padding="16dp"
        android:background="@color/colorAccent"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/btn_to_site"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
